Update 'go-vacntohj' component image to: quay.io/quay_xjiang/go-vacntohj:6bf39cf01374ed5efc7e711c81f02f62cdbe8302@sha256:ab8e897f9ed76b9b3b1e8a90b46c2349113cae42b450ccc803ec472fe974e7dc

--- a/components/go-vacntohj/overlays/development/deployment-patch.yaml
+++ b/components/go-vacntohj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-vacntohj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/quay_xjiang/go-vacntohj:6bf39cf01374ed5efc7e711c81f02f62cdbe8302@sha256:ab8e897f9ed76b9b3b1e8a90b46c2349113cae42b450ccc803ec472fe974e7dc
+          name: container-image
